compiler/testData/diagnostics/nativeTests/externalNonFunctions.kt
external class C
external object O
external interface I
external enum class E
external annotation class A
<!WRONG_MODIFIER_TARGET!>external<!> typealias TA = Any
external val p: Any